# encurtador-de-url

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust-toolchain.toml
.docker/grafana/: grafana.ini
.docker/grafana/provisioning/dashboards/: main.yml  visao-geral.json
.docker/grafana/provisioning/datasources/: prometheus-datasource.yml
.docker/prometheus/: prometheus.yml
.sqlx/: query-00e7869077ecc2a1cb88122c4fadf3215a8e219482234c47ec7c652b240087b7.json  query-3f3c47768923680815f6a868d215f2b04a7db930283c04726af7c24673fb0c25.json  query-63cd07977a6c52ee54dc6acef717484be3c4bb345a086a31d7bc85280bdd4af3.json
src/: auth.rs  main.rs  routes.rs  utils.rs
