[package]
name = "encurtador-de-url"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-prometheus = "0.6.1"
base64 = "0.22.0"
dotenvy = "0.15.7"
metrics = "0.22.3"
metrics-exporter-prometheus = "0.14.0"
rand = "0.8.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sha3 = "0.10.8"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
